WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131738
[New Multicolumn] columnTranslationForOffset is not column-span-aware
https://bugs.webkit.org/show_bug.cgi?id=131738
Summary
[New Multicolumn] columnTranslationForOffset is not column-span-aware
Dave Hyatt
Reported
2014-04-16 10:11:01 PDT
columnTranslationForOffset needs to work with column-span and with multiple column sets. Right now it only works if the column set is the first one. A column set after a span won't add in its offset like it should.
Attachments
Patch
(2.94 KB, patch)
2014-04-22 13:00 PDT
,
Dave Hyatt
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-04-17 23:13:30 PDT
<
rdar://problem/16656294
>
Dave Hyatt
Comment 2
2014-04-21 13:43:02 PDT
This does not block turning the new columns on.
Dave Hyatt
Comment 3
2014-04-22 13:00:48 PDT
Created
attachment 229909
[details]
Patch Since I'm so close to turning new columns on, this is covered by tests that will be enabled when the flag is flipped.
Dave Hyatt
Comment 4
2014-04-22 13:06:09 PDT
Fixed in
r167677
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug