[New Multicolumn] Make sure columnTranslationForOffset has the same column-span-aware translation that fragment collection does. https://bugs.webkit.org/show_bug.cgi?id=131738

Reviewed by Anders Carlsson.

* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::collectLayerFragments):
Remove a FIXME that is no longer needed, since the translation offset of the
column set did get patched.

(WebCore::RenderMultiColumnSet::columnTranslationForOffset):
Add the exact same fix to columnTranslationForOffset that was applied to collectLayerFragments.



Canonical link: https://commits.webkit.org/150094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167677 268f45cc-cd09-0410-ab3c-d52691b4dbfc